--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.2.3",
+    "@types/nodemailer": "^6.4.8",
     "nodemon": "^2.0.22",
     "prisma": "^4.15.0",
     "ts-node": "^10.9.1",
@@ -38,6 +41,7 @@
     "anymatch": "^3.1.3",
     "arg": "^4.1.3",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^5.1.0",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
@@ -50,7 +54,7 @@
     "create-require": "^1.1.1",
     "debug": "^3.2.7",
     "diff": "^4.0.2",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
@@ -60,10 +64,12 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
     "make-error": "^1.3.6",
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
