--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "nodemailer": "^6.9.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
+    "pdf2json": "^3.0.5",
     "picomatch": "^2.3.1",
     "pre-commit": "^1.2.2",
     "pstree.remy": "^1.1.8",
