--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "acorn-walk": "^8.2.0",
     "anymatch": "^3.1.3",
     "arg": "^4.1.3",
+    "axios": "^1.6.7",
     "balanced-match": "^1.0.2",
     "bcrypt": "^5.1.1",
     "binary-extensions": "^2.2.0",
@@ -72,6 +73,7 @@
     "nodemailer": "^6.9.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
+    "pdf-lib": "^1.17.1",
     "picomatch": "^2.3.1",
     "pre-commit": "^1.2.2",
     "pstree.remy": "^1.1.8",
